<resources>
    <string name="app_name">ITAMINIPROJECT</string>
    <string name="tech4dev_wtm">Tech4Dev WTM</string>
    <string name="sign_into_your_account">Sign into your account..</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="submit">SUBMIT</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_to_your_account">Sign in to your account..</string>
</resources>